force-app/main/default/objects/THORIntegration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>FTP_Endpoint__c</fullName>
        <label>FTP Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>File__c</fullName>
        <label>File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgDomainUrl__c</fullName>
        <label>OrgDomainUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <label>Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftp_host__c</fullName>
        <label>ftp-host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_API_Key_Header__c</fullName>
        <label>iRPA API Key Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_API_Key__c</fullName>
        <label>iRPA API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Activity_Endpoint__c</fullName>
        <label>iRPA Activity Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Activity_Token__c</fullName>
        <label>iRPA Activity Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Cause_Endpoint__c</fullName>
        <label>iRPA Cause Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Cause_Token__c</fullName>
        <label>iRPA Cause Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Client_Id__c</fullName>
        <label>iRPA Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Client_Secret_Id__c</fullName>
        <label>iRPA Client Secret Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Item_Endpoint__c</fullName>
        <label>iRPA Item Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Item_Token__c</fullName>
        <label>iRPA Item Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Notification_Endpoint__c</fullName>
        <label>iRPA Notification Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Notification_File_Endpoint__c</fullName>
        <label>iRPA Notification File Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Notification_Token__c</fullName>
        <label>iRPA Notification Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Order_Endpoint__c</fullName>
        <label>iRPA Order Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Order_Token__c</fullName>
        <label>iRPA Order Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Spare_Part_Request_Endpoint__c</fullName>
        <label>iRPA Spare Part Request Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Spare_Part_Request_Token__c</fullName>
        <label>iRPA Spare Part Request Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_Token_Endpoint__c</fullName>
        <label>iRPA Token Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iRPA_WorkClearance_Endpoint__c</fullName>
        <label>iRPA WorkClearance Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>THORIntegration</label>
</CustomObject>